--- a/01-ec2/serverless.yml
+++ b/01-ec2/serverless.yml
@@ -14,10 +14,10 @@ resources:
     BastionHost:
       Type: AWS::EC2::Instance
       Properties:
+        KeyName: main
         ImageId: ami-0ac019f4fcb7cb7e6 # Ubuntu 18.04 LTS
         InstanceInitiatedShutdownBehavior: stop
         InstanceType: t2.micro
-        PrivateIpAddress: '${env:DB_IP}'
         SecurityGroupIds: 
           - ${cf:webhook-networking-dev.DBSecurityGroupId.Value}
           - ${cf:webhook-networking-dev.BastionSecurityGroupId.Value}
@@ -28,14 +28,17 @@ resources:
             Value: webhook-example
         UserData:
           Fn::Base64:
-            - |
-              #!/bin/bash
-              apt-get update -y && apt-get upgrade -y
-              apt-get install openssh-server -y
-              service ssh start
+            Fn::Join:
+              - ""
+              -
+                - "#!/bin/bash\n"
+                - "apt-get update -y && apt-get upgrade -y\n"
+                - "apt-get install openssh-server -y\n"
+                - "service ssh start\n"
     TimestreamDB:
       Type: AWS::EC2::Instance
       Properties:
+        KeyName: main
         ImageId: ami-0ac019f4fcb7cb7e6 # Ubuntu 18.04 LTS
         InstanceInitiatedShutdownBehavior: stop
         InstanceType: t2.micro
@@ -49,21 +52,23 @@ resources:
             Value: webhook-example
         UserData:
           Fn::Base64:
-            - |
-              #!/bin/bash
-              apt-get update -y && apt-get upgrade -y
-              apt-get install software-properties-common gnupg2 wget openssh-server -y
-              sh -c "echo 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' >> /etc/apt/sources.list.d/pgdg.list"
-              wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-              add-apt-repository -y ppa:timescale/timescaledb-ppa
-              apt-get update && apt-get upgrade -y
-              printf "12\n5\n" | apt-get install -y timescaledb-postgresql-11
-              timescaledb-tune --quiet --yes
-              service postgresql restart
-              su - postgres -c "psql -U postgres -d postgres -c \"alter user postgres with password 'p@ssw0rd';\""
-              su - postgres -c "printf \"CREATE database webhook;\" | PGPASSWORD='p@ssw0rd' psql -U postgres -f -"
-              su - postgres -c "printf \"CREATE EXTENSION IF NOT EXISTS timescaledb CASCADE;\" | PGPASSWORD='p@ssw0rd' psql -U postgres -f - webhook"
-              service ssh start
+            Fn::Join:
+              - ""
+              -
+                - "#!/bin/bash\n"
+                - "apt-get update -y && apt-get upgrade -y\n"
+                - "apt-get install software-properties-common gnupg2 wget openssh-server -y\n"
+                - "sh -c \"echo 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' >> /etc/apt/sources.list.d/pgdg.list\"\n"
+                - "wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -\n"
+                - "add-apt-repository -y ppa:timescale/timescaledb-ppa\n"
+                - "apt-get update && apt-get upgrade -y\n"
+                - "printf \"12\n5\n\" | apt-get install -y timescaledb-postgresql-11\n"
+                - "timescaledb-tune --quiet --yes\n"
+                - "service postgresql restart\n"
+                - "su - postgres -c \"psql -U postgres -d postgres -c \\\"alter user postgres with password 'p@ssw0rd';\\\"\"\n"
+                - "su - postgres -c \"PGPASSWORD='p@ssw0rd' psql -U postgres -c \\\"CREATE DATABASE webhook;\\\"\"\n"
+                - "su - postgres -c \"PGPASSWORD='p@ssw0rd' psql -U postgres -c \\\"CREATE EXTENSION IF NOT EXISTS timescaledb CASCADE;\\\" webhook\"\n"
+                - "service ssh start"
   Outputs:
     DBInstanceId:
       Value:
