--- a/01-ec2/serverless.yml
+++ b/01-ec2/serverless.yml
@@ -66,6 +66,8 @@ resources:
                 - "apt-get update -yq && apt-get upgrade -yq\n"
                 - "printf \"12\n5\n\" | apt-get install -y timescaledb-postgresql-11\n"
                 - "timescaledb-tune --quiet --yes\n"
+                - "sed -i \"s/#listen_addresses = 'localhost'/listen_addresses = '10.0.2.55'/g\" /etc/postgresql/11/main/postgresql.conf"
+                - "sed -i \"s/# IPv4 local connections:/host    all             all             10.0.2.0/24             md5/g\" /etc/postgresql/11/main/pg_hba.conf"
                 - "service postgresql restart\n"
                 - "su - postgres -c \"psql -U postgres -d postgres -c \\\"alter user postgres with password 'p@ssw0rd';\\\"\"\n"
                 - "su - postgres -c \"PGPASSWORD='p@ssw0rd' psql -U postgres -c \\\"CREATE DATABASE webhook;\\\"\"\n"
